--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@mantine/core": "^4.2.8",
+    "@mantine/dates": "^4.2.8",
+    "@mantine/form": "^4.2.8",
+    "@mantine/hooks": "^4.2.8",
     "@mantine/next": "^4.2.8",
     "@supabase/supabase-js": "^1.35.3",
+    "dayjs": "^1.11.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
