--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@mantine/core": "^4.2.8",
     "@mantine/next": "^4.2.8",
     "@supabase/supabase-js": "^1.35.3",
+    "easy-fit": "^0.0.8",
+    "garmin-connect": "^1.4.3",
+    "net": "^1.0.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
