--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@mantine/core": "^4.2.8",
+    "@mantine/hooks": "^4.2.8",
     "@mantine/next": "^4.2.8",
     "@supabase/supabase-js": "^1.35.3",
-    "next": "12.1.6",
+    "next": "^12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "tabler-icons-react": "^1.48.1"
   },
   "devDependencies": {
     "@types/node": "17.0.41",
