--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "garmin-connect": "^1.4.3",
     "net": "^1.0.2",
     "dayjs": "^1.11.3",
-    "next": "12.1.6",
+    "@types/react-vis": "^1.11.11",
+    "d3-shape": "^3.1.0",
+    "next": "^12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-vis": "^1.11.7",
     "tabler-icons-react": "^1.48.1"
   },
   "devDependencies": {
