--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@mantine/hooks": "^4.2.8",
     "@mantine/next": "^4.2.8",
     "@supabase/supabase-js": "^1.35.3",
+    "dayjs": "^1.11.3",
     "easy-fit": "^0.0.8",
     "garmin-connect": "^1.4.3",
     "net": "^1.0.2",
-    "dayjs": "^1.11.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "tabler-icons-react": "^1.48.1"
+    "tabler-icons-react": "^1.48.1",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "17.0.41",
